# valea

./: .gitignore  .tool-versions  Justfile  PRODUCT.md  README.md  package.json
.claude/: launch.json
.github/workflows/: release.yml
.superpowers/sdd/: task-6-report.md
backend/: .env.example  .formatter.exs  .gitignore  mix.exs
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/: valea_web.ex
backend/lib/valea/: agents.ex  api.ex  application.ex  audit.ex  cockpit.ex  harness.ex  icm.ex  mounts.ex  paths.ex  queue.ex  release.ex  repo.ex  workflows.ex  yaml.ex
backend/lib/valea_web/: endpoint.ex  router.ex  telemetry.ex
backend/priv/icm_template/: AGENTS.md  CLAUDE.md  CONTEXT.md  icm.yaml
backend/priv/legacy_workspace_template/: MOUNTS.md  gitignore
backend/scripts/: build-release.sh
desktop/: package.json
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  mail-keychain.json  updates.json
desktop/src-tauri/src/: keychain.rs  main.rs
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  RELEASING.md  VISION.md
docs/notes/: 2026-07-16-comprehensive-app-review.md  2026-07-16-reference-icm-study.md  2026-07-16-testing-strategy-sweep.md  2026-07-16-valea-rigidity-map.md  acp-launch-contract.md
docs/testing/: browser-test-plan.md
frontend/: components.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  fontsource.d.ts
scripts/dovecot/: dovecot.conf
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+526 files in other folders)
